WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29175
JavaScriptCore: corrects build break on sparc 64 with gcc
https://bugs.webkit.org/show_bug.cgi?id=29175
Summary
JavaScriptCore: corrects build break on sparc 64 with gcc
Jocelyn Turcotte
Reported
2009-09-11 03:09:01 PDT
Created
attachment 39420
[details]
Patch Compiling JavaScriptCore on sparc 64 with gcc fails. ThreadSafeShared uses the atomic __gnu_cxx::__exchange_and_add with an int, however on sparc 64 the _Atomic_word argument is typedefed to long (8 bytes). The patch disables WTF_USE_LOCKFREE_THREADSAFESHARED in ThreadSafeShared to use a mutex instead when compiling for sparc 64 with gcc.
Attachments
Patch
(1.80 KB, patch)
2009-09-11 03:09 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Patch v0.2
(2.12 KB, patch)
2009-09-11 05:39 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2009-09-11 05:39:10 PDT
Created
attachment 39423
[details]
Patch v0.2 Copy but patch description into changelog
Simon Hausmann
Comment 2
2009-09-11 05:40:53 PDT
Comment on
attachment 39423
[details]
Patch v0.2 r=me
WebKit Commit Bot
Comment 3
2009-09-11 06:29:37 PDT
Comment on
attachment 39423
[details]
Patch v0.2 Clearing flags on attachment: 39423 Committed
r48300
: <
http://trac.webkit.org/changeset/48300
>
WebKit Commit Bot
Comment 4
2009-09-11 06:29:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug